python/testData/inspections/AddToImportFromList.py
from AddToImportFromFoo import bar

<caret><error descr="Unresolved reference 'foo'">foo</error> # must get imported
